# esp32-camera-rust

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  cfg.toml.example  esp32-camera-bindings.h  sdkconfig.defaults
.cargo/: config.toml
device/: Cargo.toml  README.md  esp32-camera-bindings.h  sdkconfig.defaults
device/.cargo/: config.toml
device/src/: boards.rs  camera.rs
device/src/boards/: aithinker.rs
device/src/camera/: framesize.rs  pixelformat.rs
device/utils/: send_capture.sh
src/: board.rs  camera.rs  main.rs  messages.rs  ov2460_config.rs  packet.rs  wifi.rs
src/boards/: freenove.rs
src/camera/: framesize.rs  pixelformat.rs
utils/: send_capture.sh  send_setframesize.sh
