[package]
name = "esp32-camera-rust"
version = "0.1.0"
authors = ["benji343"]
edition = "2021"
resolver = "2"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1" }
esp-idf-svc = { version = "0.45.0" }
base64 = "0.21.0"
anyhow = "1.0.71"
embedded-svc = "0.24.0"

[patch.crates-io]
# https://github.com/esp-rs/esp-idf-hal/issues/215#issuecomment-1462363166
esp-idf-hal = { git = "https://github.com/benji343/esp-idf-hal-camera-fix" }

[build-dependencies]
anyhow = "1.0.71"
embuild = "0.31.1" 
dotenv-build = "0.1.1"

[package.metadata.esp-idf-sys]
extra_components = [
  { component_dirs = "./esp32-camera", bindings_header = "esp32-camera-bindings.h" }
]
